# Linux-Client_Server

./: CMakeLists.txt  client.cpp  passwd.txt  readme.md  script.sh  server.cpp
ServerModule/include/: ServerInit.h  base.h  mytime.h
ServerModule/src/: ServerInit.cpp  base.cpp  mytime.cpp
